Sat Jun 24 16:44:19 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fix for segv when tring to get image info for a generated (not
	on fs) image.

Sat Jun 24 16:28:11 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fix for rotation and panning and zooming in fullscreen mode.

Sat Jun 24 12:21:02 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added --title, with a nice clean patch from Eric Dorland
	<dorland@lords.com>, allows you to set the window title to be used
	for slideshow mode. He also modified cam to use this to label it's
	windows. A combined perl and C patch - neato ;-)

Sat Jun 24 00:46:54 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* New menu item, Reset. It resets the zoom/pan/rotate etc.
	* Currently only with -P (to be fixed), a reload does not force a
	reset like it did before, so you can zoom a webcam and not have it
	reset on reload.

Sat Jun 24 00:13:53 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Thumbnails, when clicked, now all open the clicked image in the
	same window. Much better for browsing.
	* Menu fixups, more efficient now. Also, better context menus,
	having the right options for the right window types.
	* If you open a thumbnail, and then delete it or remove it from
	the filelist, the thumbnail view will update to show the
	fact. This is cool :-)

Fri Jun 23 17:15:07 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Depreciated the FEH_OPTIONS envrionment variable in favour of
	the configuration file themes.

Fri Jun 23 14:46:21 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Mwahahaha. Asynchronous events for index, thumbnails and
	collages. All events are handled while the images are
	generated. You can quit, bring up menus, zoom, pan and rotate, all
	whilst the image is still being created. Much better.
	* Pass the progress function around instead of using the
	context. Kills two bugs.

Fri Jun 23 14:11:56 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Documentation fixups.